--- a/header.html
+++ b/header.html
@@ -26,6 +26,9 @@
             case '/contactUs.html':
                 index = 3;
                 break;
+            case '/more.html':
+                index = 3;
+                break;
             default:
                 index = 0
                 break;
