--- a/productService.html
+++ b/productService.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="./imgs/icon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>产品服务</title>
+    <title>果冻绘写-产品服务</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -20,7 +21,287 @@
     <script src="./js/header.js"></script>
     <!-- 头部部分结束 -->
     <!--主体内容-->
-    <div class="content">产品服务</div>
+    <div class="content">
+        <div class="banner-content">
+            <div class="banner-content-img"></div>
+            <div class="banner-content-text">以金融大数据为驱动的债券、股权智能辅助撰写工具</div>
+            <div class="banner-btn">申请免费试用</div>
+        </div>
+        <div class="container-box">
+            <div class="my-container">
+                <div class="introduce-box">
+                    <div class="line-title">
+                        <div class="left-line"></div>
+                        <div class="title">跨平台智能文档撰写利器，实现文档智能撰写</div>
+                        <div class="right-line"></div>
+                    </div>
+                    <div class="introduce-text">
+                        Word插件及网页版，内容互通，一键同步
+                    </div>
+                </div>
+
+                <div class="annual-report-box">
+                    <div class="annual-report-left">
+                        <img src="./imgs/productService/刷年报.png">
+                        <div class="annual-report-left-content">
+                            <div class="annual-report-left-title">果冻绘写刷年报</div>
+                            <div class="annual-report-left-text">债券年报智能辅助撰写工具</div>
+                            <div class="annual-report-left-p">支持WPS、Office365及以上版本，操作环境为Windows系统</div>
+                            <div class="annual-report-left-btn">查看插件安装方法</div>
+                        </div>
+                    </div>
+                    <div class="annual-report-right">
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">专注刷年报</div>
+                                <div class="introduce-text">高比例完成上交所债券年报、半年报、受托年报撰写，可快速通过XBRL有效性验证；</div>
+                            </div>
+                        </div>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">数据智能填充</div>
+                                <div class="introduce-text">集成权威原始数据源，深度读取自有报告信息，实现智能填充；</div>
+                            </div>
+                        </div>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">撰写自动留痕</div>
+                                <div class="introduce-text">数据来源一键追查，全文留痕编辑，方便校验审核；</div>
+                            </div>
+                        </div>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">所见即所得</div>
+                                <div class="introduce-text">撰写全程不改变内容格式，不丢失文字标点，无需担心出错。</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pro-box">
+                    <div class='pro-left'>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">多类型报告撰写</div>
+                                <div class="introduce-text">高比例完成对外申报类报告及内部管理文件的智能撰写工作；</div>
+                            </div>
+                        </div>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">极简操作体验</div>
+                                <div class="introduce-text">智能匹配海量发行人数据；一处修改全文更新，自动保存至服务器</div>
+                            </div>
+                        </div>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">数据溯源优化</div>
+                                <div class="introduce-text">自动记录撰写历史，点击即可完成数据溯源，展示更清晰，修改更 便捷；</div>
+                            </div>
+                        </div>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">底稿更换无忧</div>
+                                <div class="introduce-text">支持多次更换底稿文档，系统智能比对底稿数据，提示数据更新。</div>
+                            </div>
+                        </div>
+                        <div class="introduce-tip">
+                            *果冻绘写Pro插件包含刷年报插件上述所有功能
+                        </div>
+                    </div>
+                    <div class='pro-right'>
+                        <img src="./imgs/productService/pro.png">
+                        <div class="pro-right-content">
+                            <div class="pro-right-title">果冻绘写Pro</div>
+                            <div class="pro-right-text">智能撰写，极简操作，轻松搞定上百金融报告</div>
+                            <div class="pro-right-p">支持WPS、Office365及以上版本，操作环境为Windows系统</div>
+                            <div class="pro-right-btn">查看插件安装方法</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="webside-report-box">
+                    <div class="webside-report-left">
+                        <img src="./imgs/productService/网页端.png">
+                        <div class="webside-report-left-content">
+                            <div class="webside-report-left-title">果冻绘写网页端</div>
+                            <div class="webside-report-left-text">团队在线协同办公，实现高效项目管理</div>
+                            <div class="webside-report-left-btn">立即适用</div>
+                        </div>
+                    </div>
+                    <div class="webside-report-right">
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">项目协同</div>
+                                <div class="introduce-text">团队在线协同编辑，包含管理员、项目成员、质控等丰富角色，任 务灵活分配；</div>
+                            </div>
+                        </div>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">项目管理</div>
+                                <div class="introduce-text">实时跟踪项目进度，可创建工作日历、订阅提醒事项，查看紧急待 处理项目；</div>
+                            </div>
+                        </div>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">模板配置</div>
+                                <div class="introduce-text">每种报告类型均可配置多份报告模板，适应多种场景，还可自定义 修改；</div>
+                            </div>
+                        </div>
+                        <div class="introduce-item">
+                            <i></i>
+                            <div class="introduce-item-box">
+                                <div class="introduce-title">文本解析</div>
+                                <div class="introduce-text">智能提取底稿信息，支持上传审计报告、募集说明书等数十种文档。</div>
+                            </div>
+                        </div>
+                        <div class="introduce-tip">
+                            *网页端现只可编辑模板数据内容，其余固定部分可在插件端修改
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="introduce-video-content">
+            <div class="my-container">
+                <div class="line-title">
+                    <div class="left-line"></div>
+                    <div class="title">选择果冻绘写，更安全、更便捷、更可靠</div>
+                    <div class="right-line"></div>
+                </div>
+                <div class="introduce-video-box">
+                    <video src="./video/1.mp4" controls poster="./imgs/video.png"></video>
+                </div>
+            </div>
+        </div>
+        <div class="service-content">
+            <div class="my-container">
+                <div class="line-title">
+                    <div class="left-line"></div>
+                    <div class="title">选择您所需要的果冻绘写服务</div>
+                    <div class="right-line"></div>
+                </div>
+
+                <div class="service-type-list">
+                    <li class="service-type-list-item">
+                        <div class="service-type-list-item-one">
+                            <div class="title">果冻绘写刷年报</div>
+                            <img class="logo" src="./imgs/productService/红.png"></img>
+                        </div>
+                        <div class="service-type-list-item-one">
+                            <div class="title">果冻绘写pro</div>
+                            <img class="logo" src="./imgs/productService/logo1.png"></img>
+                        </div>
+                        <div class="service-type-list-item-one">
+                            <div class="title">果冻绘写网页端</div>
+                            <img class="logo" src="./imgs/productService/黄.png"></img>
+                        </div>
+                    </li>
+                    <li class="service-type-list-item">
+                        <div class="service-type-list-item-text">
+                            债券年报
+                        </div>
+                        <div class="service-type-list-item-text">
+                            外部申报文件<br>内部管理文件<br>后督类
+                        </div>
+                        <div class="service-type-list-item-text">
+                            外部申报文件<br>内部管理文件<br>后督类
+                        </div>
+                    </li>
+
+                    <li class="service-type-list-item">
+                        <div class="service-type-list-item-text">
+                            公开数据来源
+                        </div>
+                        <div class="service-type-list-item-text">
+                            公开数据来源
+                        </div>
+                        <div class="service-type-list-item-text">
+                            公开数据来源
+                        </div>
+                    </li>
+
+                    <li class="service-type-list-item">
+                        <div class="service-type-list-item-text">
+                            一人编辑
+                        </div>
+                        <div class="service-type-list-item-text">
+                            多人协同编辑
+                        </div>
+                        <div class="service-type-list-item-text">
+                            多人协同编辑
+                        </div>
+                    </li>
+
+                    <li class="service-type-list-item">
+                        <div class="service-type-list-item-text">
+                            支持单人项目管理
+                        </div>
+                        <div class="service-type-list-item-text">
+                            支持单人项目管理
+                        </div>
+                        <div class="service-type-list-item-text">
+                            支持单人项目管理<br>由管理员统一管理
+                        </div>
+                    </li>
+
+                    <li class="service-type-list-item">
+                        <div class="service-type-list-item-text">
+                            无限次审计报告更新
+                        </div>
+                        <div class="service-type-list-item-text">
+                            无限次审计报告更新
+                        </div>
+                        <div class="service-type-list-item-text">
+                            无限次审计报告更新
+                        </div>
+                    </li>
+
+                    <li class="service-type-list-item">
+                        <div class="service-type-list-item-text">
+                            支持数据追溯
+                        </div>
+                        <div class="service-type-list-item-text">
+                            支持数据追溯
+                        </div>
+                        <div class="service-type-list-item-text">
+                            支持数据追溯
+                        </div>
+                    </li>
+
+                    <li class="service-type-list-item">
+                        <div class="service-type-list-item-text">
+                            一份299元<br>三份799元<br>五份1250元
+                        </div>
+                        <div class="service-type-list-item-text">
+                            一份299元<br>三份799元<br>五份1250元
+                        </div>
+                        <div class="service-type-list-item-text">
+                            企业限定<br>每份报告低至199元
+                        </div>
+                    </li>
+
+                    <div class="service-type-btn-box">
+                        <div class="service-type-btn">获取更多产品报价</div>
+                    </div>
+
+                </div>
+
+                
+            </div>
+        </div>
+    </div>
     <!-- 主体内容结束 -->
     <!-- 底部部分 -->
     <footer class="footer-box"></footer>
