--- a/contactUs.html
+++ b/contactUs.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="./imgs/icon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>联系我们</title>
+    <title>果冻绘写-联系我们</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -25,7 +26,6 @@
             <div class="banner-content-img"></div>
             <div class="banner-content-text">以金融大数据为驱动的债券、股权智能辅助撰写工具</div>
             <div class="banner-btn">申请免费试用</div>
-
         </div>
         <div class="my-container">
             <div class="online-support">
