--- a/header.html
+++ b/header.html
@@ -2,10 +2,10 @@
     <div class="my-container">
         <div class="header-logo"></div>
         <div class="header-menu">
-            <a href="/index.html" class="header-menu-item">首页</a>
-            <a href="/productService.html" class="header-menu-item">产品服务</a>
-            <a href="/dataCapability.html" class="header-menu-item">数据能力</a>
-            <a href="/contactUs.html" class="header-menu-item">联系我们</a>
+            <a href="/guanwang1/index.html" class="header-menu-item">首页</a>
+            <a href="/guanwang1/productService.html" class="header-menu-item">产品服务</a>
+            <a href="/guanwang1/dataCapability.html" class="header-menu-item">数据能力</a>
+            <a href="/guanwang1/contactUs.html" class="header-menu-item">联系我们</a>
             <div class="header-menu-btn">免费试用</div>
         </div>
     </div>
