--- a/header.html
+++ b/header.html
@@ -14,19 +14,19 @@
     $(function () {
         let index = 0;
         switch (window.location.pathname) {
-            case '/index.html':
+            case '/guanwang1/index.html':
                 index = 0;
                 break;
-            case '/productService.html':
+            case '/guanwang1/productService.html':
                 index = 1;
                 break;
-            case '/dataCapability.html':
+            case '/guanwang1/dataCapability.html':
                 index = 2;
                 break;
-            case '/contactUs.html':
+            case '/guanwang1/contactUs.html':
                 index = 3;
                 break;
-            case '/more.html':
+            case '/guanwang1/more.html':
                 index = 3;
                 break;
             default:
