--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="sm-banner-btn">免费试用</div>
         </div>
         <div class="my-container">
-            <div class="customer-box">
+            <!-- <div class="customer-box">
                 <div class="line-title">
                     <div class="left-line"></div>
                     <div class="title">他们都在用果冻绘写</div>
@@ -270,7 +270,7 @@
                     <div class="customer-item"></div>
                     <div class="customer-item"></div>
                 </div>
-            </div>
+            </div> -->
             <div class="research-box">
                 <div class="line-title">
                     <div class="left-line"></div>
