--- a/contactUs.html
+++ b/contactUs.html
@@ -38,12 +38,12 @@
                     <div class="QR-code--item">
                         <img class="QR-img" src='./imgs/contactUs/公众号.png'></img>
                         <div class="QR-title">公众号</div>
-                        <div class="QR-text">专业产品知识、热门行业资讯 行业报告发布</div>
+                        <div class="QR-text">专业产品知识、热门行业资讯<br>行业报告发布</div>
                     </div>
                     <div class="QR-code--item">
                         <img class="QR-img" src='./imgs/contactUs/专属客服.png'></img>
                         <div class="QR-title">专属客服</div>
-                        <div class="QR-text">08:00 - 24:00迅速响应 免费咨询 拷贝</div>
+                        <div class="QR-text">08:00 - 24:00迅速响应<br>免费咨询</div>
                     </div>
                 </div>
             </div>
