--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/animate.min.css">
     <script src="./js/jq.js"></script>
     <script src="./js/bootstrap.min.js"></script>
 </head>
@@ -34,7 +35,8 @@
                 <div class="carousel-item active inner-item">
                     <div class="container inner-item-container">
                         <img src="./imgs/home/组42.png" class="inner-item-img" alt="">
-                        <div class="inner-text">以金融大数据为驱动的债券、股权智能辅助撰写工具</div>
+                        <div class="inner-text">以金融大数据为驱动的<br class="text-br" style="display: none;">债券、股权智能辅助撰写工具</div>
+
                         <div class="inner-btn">
                             产品详情 <img src="./imgs/arrow-right.svg" />
                         </div>
@@ -95,6 +97,7 @@
                         <div class="right-three-text">金融知识图谱</div>
                         <div class="right-three-text">金融文本解析</div>
                         <div class="right-three-text">自然语言处理</div>
+                        <div class="right-three-text2" style="display: none;">（金融知识图谱、金融文本解析、自然语言处理）</div>
                     </div>
                     <div class="right-four">
                         <img src="./imgs/home/箭头长.png">
@@ -114,6 +117,7 @@
                         </div>
                         <div class="right-five-item">
                             <img src='./imgs/home/更多.png'>
+                            <span style="display: none;">更多</span>
                         </div>
                     </div>
                 </div>
@@ -258,7 +262,7 @@
             <div class="sm-banner-btn">免费试用</div>
         </div>
         <div class="my-container">
-            <div class="customer-box">
+            <!-- <div class="customer-box">
                 <div class="line-title">
                     <div class="left-line"></div>
                     <div class="title">他们都在用果冻绘写</div>
@@ -270,7 +274,7 @@
                     <div class="customer-item"></div>
                     <div class="customer-item"></div>
                 </div>
-            </div>
+            </div> -->
             <div class="research-box">
                 <div class="line-title">
                     <div class="left-line"></div>
