--- a/productService.html
+++ b/productService.html
@@ -32,7 +32,7 @@
                 <div class="introduce-box">
                     <div class="line-title">
                         <div class="left-line"></div>
-                        <div class="title">跨平台智能文档撰写利器，实现文档智能撰写</div>
+                        <div class="title">跨平台智能文档撰写利器<span>，</span><br style="display: none;">实现文档智能撰写</div>
                         <div class="right-line"></div>
                     </div>
                     <div class="introduce-text">
