--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,7 @@
                 <div class="footer-menu-item">咨询电话：0571 - 8877 6680</div>
                 <div class="footer-menu-item">服务邮箱：service@guodongbond.com</div>
             </div>
-            <div class="footer-menu-content">
+            <div class="footer-menu-content footer-menu-content-img">
                 <div class="footer-menu-title">媒体</div>
                 <div class="footer-menu-img"></div>
             </div>
