--- a/header.html
+++ b/header.html
@@ -15,10 +15,10 @@
         </div>
 
         <div class="mobile-menu animated">
-            <a href="/index.html" class="header-mobile-menu-item animated fadeIn">首页</a>
-            <a href="/productService.html" class="header-mobile-menu-item animated fadeIn">产品服务</a>
-            <a href="/dataCapability.html" class="header-mobile-menu-item animated fadeIn">数据能力</a>
-            <a href="/contactUs.html" class="header-mobile-menu-item animated fadeIn">联系我们</a>
+            <a href="/guanwang1/index.html" class="header-mobile-menu-item animated fadeIn">首页</a>
+            <a href="/guanwang1/productService.html" class="header-mobile-menu-item animated fadeIn">产品服务</a>
+            <a href="/guanwang1/dataCapability.html" class="header-mobile-menu-item animated fadeIn">数据能力</a>
+            <a href="/guanwang1/contactUs.html" class="header-mobile-menu-item animated fadeIn">联系我们</a>
         </div>
     </div>
 </div>
