--- a/productService.html
+++ b/productService.html
@@ -133,7 +133,7 @@
                         <div class="webside-report-left-content">
                             <div class="webside-report-left-title">果冻绘写网页端</div>
                             <div class="webside-report-left-text">团队在线协同办公，实现高效项目管理</div>
-                            <div class="webside-report-left-btn">立即适用</div>
+                            <div class="webside-report-left-btn">立即试用</div>
                         </div>
                     </div>
                     <div class="webside-report-right">
@@ -181,7 +181,7 @@
                     <div class="right-line"></div>
                 </div>
                 <div class="introduce-video-box">
-                    <video src="./video/1.mp4" controls poster="./imgs/video.png"></video>
+                    <video src="./video/果冻绘写.mp4" controls></video>
                 </div>
             </div>
         </div>
